fix spacing issue

--- a/frontend/src/assets/styles/layouts/_results.scss
+++ b/frontend/src/assets/styles/layouts/_results.scss
@@ -21,7 +21,7 @@
 //        flex-direction: row;
       }
     }
-    
+
     &__left {
       flex: 0 0 100%;
 //      background-image: url(assets/img/Wallpaper-Left.png);
@@ -39,7 +39,7 @@
 //        position: sticky;
         top: 0;
       }
-      
+
       .bg-white-close-holes {
         .form-control {
           border-radius: 0;
@@ -97,7 +97,7 @@
           border-color: $primary;
         }
       }
-      
+
       .filters__container {
         background-color: $white;
         margin-bottom: 1rem;
@@ -126,8 +126,8 @@
 
       .search-flight-home h3 {
         font-family: $dona-black;
-        font-size: 1.5rem;
-        font-size: 45px;
+        font-size: 2.8125rem;
+        margin-bottom: 0;
       }
     }
 
