--- a/frontend/src/assets/styles/layouts/_search-header.scss
+++ b/frontend/src/assets/styles/layouts/_search-header.scss
@@ -7,7 +7,7 @@
       // display: block;
       padding: 1rem 2rem;
     }
-  
+
     &__top {
       margin-bottom: 1rem;
       display: flex;
@@ -38,13 +38,13 @@
           @include mq(lg) {
             font-size: 1rem;
           }
-  
+
           &:last-child {
             border-right: 0;
           }
         }
       }
-  
+
       .search-f-dropdown {
         width: 100%;
         top: 100%;
@@ -58,40 +58,44 @@
           color: #7d7d7d;
         }
       }
-  
+
     }
-  
+
     &__bottom {
       form {
         display: flex;
         flex-direction: column;
-  
+
         .form-control {
           font-family: $dona-black;
           :not(:last-child) {
             margin-bottom: 0;
-          } 
+          }
         }
         @include mq(xl) {
           flex-direction: row;
         }
       }
-  
+
       .btn-search {
         background-color: $primary;
         border-radius: 0;
         min-width: 3rem;
-  
+
         &:hover {
           background-color: darken($primary, 4%);
         }
       }
     }
-  
-  
+
+
     // Mobile - Dashboard view
     &__container {
       margin-bottom: 2.375rem;
+
+      .search-result__desktop & {
+        margin-bottom: 0;
+      }
     }
     &__mobile {
       display: flex;
@@ -102,11 +106,11 @@
       @include mq(lg) {
         display: none;
       }
-  
+
       &-logo {
         width: 3rem;
       }
-      
+
       &-search {
         width: 3rem;
         display: inline-block;
@@ -118,7 +122,7 @@
           }
         }
       }
-  
+
       &-left {
       }
       &-right {
@@ -135,4 +139,3 @@
       }
     }
   }
-  
